created endpoint to get transaction to fund project
